--- a/ChatterFox/Base.lproj/Main.storyboard
+++ b/ChatterFox/Base.lproj/Main.storyboard
@@ -21,22 +21,28 @@
                                 <rect key="frame" x="0.0" y="20" width="600" height="580"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </webView>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="bYP-mX-Yud">
+                                <rect key="frame" x="290" y="300" width="20" height="20"/>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="e8C-He-pHi" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="GpN-D0-guH"/>
                             <constraint firstItem="e8C-He-pHi" firstAttribute="top" secondItem="imN-xC-h3i" secondAttribute="bottom" id="acf-uL-1SE"/>
                             <constraint firstAttribute="trailing" secondItem="e8C-He-pHi" secondAttribute="trailing" id="bOX-tz-4Nb"/>
+                            <constraint firstItem="bYP-mX-Yud" firstAttribute="centerX" secondItem="e8C-He-pHi" secondAttribute="centerX" id="g4J-o4-6CW"/>
                             <constraint firstItem="e8C-He-pHi" firstAttribute="bottom" secondItem="5V6-Wc-CF5" secondAttribute="top" id="mUU-YZ-EVa"/>
+                            <constraint firstItem="bYP-mX-Yud" firstAttribute="centerY" secondItem="e8C-He-pHi" secondAttribute="centerY" id="qv4-Tz-Z5u"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="activityIndicator" destination="bYP-mX-Yud" id="cWV-d9-Gw4"/>
                         <outlet property="mainWebView" destination="e8C-He-pHi" id="znG-cA-wmm"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-281" y="699"/>
+            <point key="canvasLocation" x="-196" y="652"/>
         </scene>
     </scenes>
 </document>
