--- a/ChatterFox/Base.lproj/Main.storyboard
+++ b/ChatterFox/Base.lproj/Main.storyboard
@@ -9,7 +9,7 @@
         <!--Chatterfox-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MainView" id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="imN-xC-h3i"/>
                         <viewControllerLayoutGuide type="bottom" id="5V6-Wc-CF5"/>
@@ -38,7 +38,7 @@
                     </view>
                     <navigationItem key="navigationItem" title="Chatterfox" id="S9W-DR-64l">
                         <barButtonItem key="backBarButtonItem" title="Back" id="YTg-ap-d5J"/>
-                        <barButtonItem key="rightBarButtonItem" title="Setting" id="hOY-7d-hth">
+                        <barButtonItem key="rightBarButtonItem" title="Settings" id="hOY-7d-hth">
                             <connections>
                                 <segue destination="Eut-AY-oOo" kind="show" id="A7A-yI-67A"/>
                             </connections>
@@ -52,6 +52,45 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="198" y="697"/>
+        </scene>
+        <!--Secondary View Controller-->
+        <scene sceneID="Jfk-ci-G17">
+            <objects>
+                <viewController storyboardIdentifier="SecondView" id="tYc-zE-dVS" customClass="SecondaryViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="VPy-We-au9"/>
+                        <viewControllerLayoutGuide type="bottom" id="9CC-qm-Dq7"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="ieT-QM-0HZ">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <webView opaque="NO" contentMode="scaleToFill" scalesPageToFit="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oir-f2-db9">
+                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </webView>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="r8T-yZ-05f">
+                                <rect key="frame" x="290" y="300" width="20" height="20"/>
+                            </activityIndicatorView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="oir-f2-db9" firstAttribute="bottom" secondItem="9CC-qm-Dq7" secondAttribute="top" id="9kG-4L-uSi"/>
+                            <constraint firstAttribute="trailing" secondItem="oir-f2-db9" secondAttribute="trailing" id="Cj5-9U-A9n"/>
+                            <constraint firstItem="oir-f2-db9" firstAttribute="centerX" secondItem="r8T-yZ-05f" secondAttribute="centerX" id="Jhi-Ib-hwu"/>
+                            <constraint firstItem="r8T-yZ-05f" firstAttribute="centerY" secondItem="oir-f2-db9" secondAttribute="centerY" id="QWl-DD-gkm"/>
+                            <constraint firstItem="oir-f2-db9" firstAttribute="top" secondItem="VPy-We-au9" secondAttribute="bottom" id="h9T-AR-YaW"/>
+                            <constraint firstItem="oir-f2-db9" firstAttribute="leading" secondItem="ieT-QM-0HZ" secondAttribute="leading" id="qbY-CR-50A"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="documentLoadIndicator" destination="r8T-yZ-05f" id="wfT-HJ-m4I"/>
+                        <outlet property="documentWebView" destination="oir-f2-db9" id="9Mx-sl-aXv"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ilA-Zj-NEo" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="198" y="-28"/>
         </scene>
         <!--Settings-->
         <scene sceneID="4aG-qe-H7S">
@@ -132,8 +171,8 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e34-6r-NMt">
-                                                    <rect key="frame" x="25" y="7" width="129" height="30"/>
-                                                    <state key="normal" title="About Chatterfox"/>
+                                                    <rect key="frame" x="23" y="8" width="48" height="29"/>
+                                                    <state key="normal" title="Help"/>
                                                     <connections>
                                                         <action selector="helpClicked:" destination="Eut-AY-oOo" eventType="touchUpInside" id="EUc-4w-aI7"/>
                                                     </connections>
