--- a/ChatterFox/Base.lproj/Main.storyboard
+++ b/ChatterFox/Base.lproj/Main.storyboard
@@ -182,6 +182,37 @@
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
+                            <tableViewSection headerTitle="Others" id="Q78-5M-epP">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="9MO-Ms-W0f">
+                                        <rect key="frame" x="0.0" y="348" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="9MO-Ms-W0f" id="CpN-im-Zts">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wLp-YL-Xd2">
+                                                    <rect key="frame" x="522" y="11" width="42" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2HC-Cn-9hD">
+                                                    <rect key="frame" x="19" y="7" width="151" height="30"/>
+                                                    <state key="normal" title="Clear Image Cache"/>
+                                                    <connections>
+                                                        <action selector="clearImageCacheClicked:" destination="Eut-AY-oOo" eventType="touchUpInside" id="ndV-4P-6SB"/>
+                                                    </connections>
+                                                </button>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="wLp-YL-Xd2" firstAttribute="centerY" secondItem="CpN-im-Zts" secondAttribute="centerY" id="AlI-B1-aBH"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="wLp-YL-Xd2" secondAttribute="trailing" constant="28" id="dBm-7B-D2g"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
                         </sections>
                         <connections>
                             <outlet property="dataSource" destination="Eut-AY-oOo" id="y9i-xz-f96"/>
@@ -189,6 +220,7 @@
                         </connections>
                     </tableView>
                     <connections>
+                        <outlet property="clearImageCacheBtn" destination="2HC-Cn-9hD" id="ncY-Sm-AQC"/>
                         <outlet property="enableNotification" destination="mFa-vs-Sak" id="YwT-5h-rYl"/>
                         <outlet property="helpBtn" destination="e34-6r-NMt" id="GAR-g4-7fy"/>
                         <outlet property="settingTableView" destination="4Sv-Ug-zWI" id="S8N-c1-G6o"/>
